# little_pig_description

./: CMakeLists.txt  README.md  package.xml
config/: ackermann_config.yaml
launch/: upload_robot.launch
meshes/: little_pig_body.stl
urdf/: basic_laser_pig.gazebo  basic_laser_pig.urdf.xacro  basic_laser_pig_old.urdf.xacro  basic_pig.urdf.xacro  little_pig_base.urdf.xacro  scrap.urdf.xacro
xacro/macros/: _back_laser.urdf.xacro  _camera.urdf.xacro  _front_laser.urdf.xacro  _front_wheel.urdf.xacro  _imu.urdf.xacro  _rear_wheel.urdf.xacro  _steering_macro.urdf.xacro
xacro/params/: characteristics.xacro  color_properties.xacro
