<?xml version="1.0"?>
<package format="2">
  <name>little_pig_description</name>
  <version>0.0.0</version>
  <description>The little_pig_description package</description>

  <maintainer email="coach@todo.todo">coach</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
